--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -34,7 +34,7 @@
 @import "components/shippingForm";
 @import "components/customDropdown";
 @import "components/productListItem";
-// @import "components/stripePayment";
+@import "components/paymentForm";
 
 // Dashboard
 @import "../dashboard/DashboardStyles/dashboardIndex";
