--- a/client/src/Sass/components/_checkout.scss
+++ b/client/src/Sass/components/_checkout.scss
@@ -15,7 +15,8 @@
       grid-template-columns: 1fr 0.5fr;
     }
     @include breakpoint(lg) {
-      gap: 2.5rem;
+      grid-template-columns: 1fr 0.6fr;
+      gap: 2rem;
     }
 
     .chekout__subtotal {
