--- a/client/src/Sass/components/_customizeAccordion.scss
+++ b/client/src/Sass/components/_customizeAccordion.scss
@@ -63,6 +63,7 @@
           display: flex;
           color: $dark;
           gap: 0.5rem;
+          margin-bottom: $x-0-25;
 
           .MuiSvgIcon-root {
             @include h4-font;
