--- a/client/src/tables/TableStyles/_orderActions.scss
+++ b/client/src/tables/TableStyles/_orderActions.scss
@@ -59,4 +59,16 @@
       }
     }
   }
+
+  .secondary {
+    .MuiButton-root {
+      background-color: $dark-300;
+      color: $dark-alt;
+
+      &:hover {
+        background-color: $dark-500;
+        color: $white-alt;
+      }
+    }
+  }
 }
