--- a/client/src/Sass/config/_variables.scss
+++ b/client/src/Sass/config/_variables.scss
@@ -50,6 +50,7 @@ $x-2-75: 2.75rem; /* 44px */
 $x-3: 3rem; /* 48px */
 
 /******* Border ***/
+$border-white: 1px solid $white;
 $border-gray: 1px solid $gray;
 $border-dark-100: 1px solid $dark-100;
 $border-dark-alt: 1px solid $dark-alt;
