--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -11,6 +11,7 @@
 @import "components/header";
 @import "components/hero";
 @import "components/category";
+@import "components/categories";
 @import "components/products";
 @import "components/newsletter";
 @import "components/customBreadcrumbs";
