--- a/client/src/Sass/components/_categories.scss
+++ b/client/src/Sass/components/_categories.scss
@@ -1,62 +1,180 @@
 .categories__section {
   //   background-color: $white;
   margin-bottom: $x-2;
-  .categories__content {
-    display: grid;
-    place-items: center;
-    @include breakpoint(md) {
-      place-items: initial;
-    }
-    .categories__data {
-      display: grid;
-      //   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      grid-template-columns: repeat(12, 1fr);
-      gap: 1rem;
-      //   margin-top: $x-2;
-      @include breakpoint(xl) {
-        // grid-template-columns: repeat(4, minmax(250px, 1fr));
-      }
 
-      //   .MuiSkeleton-root,
-      .categories__item {
-        height: 280px !important;
-        width: 100% !important;
-        // @include breakpoint(sm) {
-        //   width: 100% !important;
-        // }
-        &:nth-child(1) {
-          grid-column: 1/7;
-          background: white;
-        }
-        &:nth-child(2) {
-          grid-column: 7/10;
-          background: white;
-        }
-        &:nth-child(3) {
-          grid-column: 10/-1;
-          background: white;
-        }
-        &:nth-child(4) {
-          grid-column: 1/4;
-          background: gray;
-        }
+  .categories__container {
+    padding: 0 $x-0-25;
+    @include breakpoint(sm) {
+      padding: 0;
+    }
+
+    .categories__content {
+      display: grid;
+      place-items: center;
+      @include breakpoint(md) {
+        place-items: initial;
       }
-      .categories__item {
-        overflow: hidden;
-        position: relative;
-        .categories__img {
-          width: 100%;
-          img {
-            vertical-align: middle;
-            object-fit: cover;
-            width: 100%;
-          }
+      .categories__data {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-auto-flow: dense;
+        gap: 0.3rem;
+        // row-gap: 1rem;
+        @include breakpoint(sm) {
+          // gap: 0.5rem;
         }
-        .categories__btn {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
+        @include breakpoint(md) {
+          // gap: 0.7rem;
+        }
+        @include breakpoint(lg) {
+          // gap: 1rem;
+        }
+
+        //   .MuiSkeleton-root,
+        .categories__item {
+          // width: 100% !important;
+          height: 95px;
+          overflow: hidden;
+          position: relative;
+
+          @include breakpoint(sm) {
+            height: 160px;
+          }
+          @include breakpoint(md) {
+            height: 220px;
+          }
+          @include breakpoint(lg) {
+            height: 280px;
+          }
+
+          .categories__img {
+            // width: 100%;
+            img {
+              // vertical-align: middle;
+              // object-fit: cover;
+              width: 100%;
+              // aspect-ratio: 4/3;
+            }
+          }
+
+          .categories__box {
+            max-width: 150px;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.4);
+            position: absolute;
+            top: 8px;
+            backdrop-filter: blur(5px);
+            padding: $x-0-5 $x-0-75;
+            display: flex;
+            flex-direction: column;
+
+            @include breakpoint(sm) {
+              max-width: 230px;
+              padding: $x-0-75 $x-1;
+              top: 20px;
+              gap: 0.1rem;
+            }
+
+            .box__subtitle {
+              color: $dark-alt;
+              font-size: 0.6rem;
+              font-weight: $bold;
+              @include breakpoint(sm) {
+                font-size: 0.7rem;
+              }
+            }
+
+            .box__title {
+              color: $dark;
+              @include small-font;
+              @include breakpoint(sm) {
+                @include h4-font;
+              }
+            }
+
+            .box__link {
+              color: $dark-alt;
+              @include smallest-font;
+              font-weight: $semi-bold;
+              @include breakpoint(sm) {
+                @include smaller-font;
+              }
+
+              &:hover {
+                color: $cyan;
+                text-decoration: underline;
+              }
+            }
+          }
+
+          &:nth-child(n) {
+            grid-column: 1/-1;
+            background: white;
+            @include breakpoint(sm) {
+              grid-column: 1/8;
+            }
+
+            .categories__box {
+              right: 8px;
+              text-align: right;
+              @include breakpoint(sm) {
+                right: 20px;
+              }
+            }
+          }
+          &:nth-child(2n) {
+            grid-column: 1/-1;
+            background: white;
+            @include breakpoint(sm) {
+              grid-column: 8/-1;
+            }
+
+            .categories__box {
+              left: 8px;
+              text-align: left;
+              @include breakpoint(sm) {
+                left: 20px;
+              }
+            }
+          }
+          &:nth-child(3n) {
+            grid-column: 1/-1;
+            background: white;
+            @include breakpoint(sm) {
+              grid-column: 1/5;
+            }
+          }
+          &:nth-child(4n) {
+            grid-column: 1/-1;
+            background: white;
+            @include breakpoint(sm) {
+              grid-column: 5/-1;
+            }
+          }
+
+          &:nth-child(5n) {
+            grid-column: 1/-1;
+            background: white;
+            @include breakpoint(sm) {
+              grid-column: 1/5;
+            }
+          }
+
+          &:nth-child(6n) {
+            grid-column: 1/-1;
+            background: white;
+            @include breakpoint(sm) {
+              grid-column: 5/9;
+            }
+          }
+
+          &:nth-child(7n) {
+            grid-column: 1/-1;
+            background: white;
+            @include breakpoint(sm) {
+              grid-column: 9/-1;
+            }
+          }
         }
       }
     }
