--- a/client/src/Sass/components/_imageHandler.scss
+++ b/client/src/Sass/components/_imageHandler.scss
@@ -17,11 +17,33 @@
     height: 80%;
     background-color: $white;
   }
-  .MuiSlider-root {
-    max-width: 480px;
+
+  .imageHandler__slider {
+    display: flex;
+    align-items: center;
+    max-width: 500px;
+    width: 100%;
+    gap: 1.5rem;
     margin: 0 auto;
-    color: $dark-alt;
+
+    .MuiSlider-root {
+      color: $dark-alt;
+    }
+
+    .MuiToggleButton-root {
+      border-radius: 50%;
+      &:hover {
+        background-color: $cyan-alt;
+      }
+    }
+    .Mui-selected {
+      background-color: $cyan-alt;
+    }
+    .Mui-disabled {
+      color: $white-alt;
+    }
   }
+
   .imageHandler__btnContainer {
     // background: gray;
     max-width: 480px;
