bug: image crop file

--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -18,6 +18,7 @@
 @import "components/profileInfo";
 @import "components/userAvatar";
 @import "components/imageHandler";
+@import "components/fileUploader";
 @import "components/login&signup";
 @import "components/profile";
 @import "components/productLayout";
