--- a/client/src/Sass/components/_category.scss
+++ b/client/src/Sass/components/_category.scss
@@ -1,43 +1,145 @@
 .category__section {
   background-color: $white;
   .category__content {
-    display: grid;
-    place-items: center;
-    @include breakpoint(md) {
-      place-items: initial;
-    }
-    .category__data {
+    .category__data,
+    .category__skeleton {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
+      gap: 0.5rem;
       margin-top: $x-2;
-      @include breakpoint(xl) {
-        grid-template-columns: repeat(4, minmax(250px, 1fr));
+
+      @include breakpoint(sm) {
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+      }
+      @include breakpoint(md) {
+        grid-template-rows: repeat(2, 1fr);
+        gap: 0.8rem;
       }
 
-      .MuiSkeleton-root,
       .category__item {
-        height: 220px !important;
-        width: 280px !important;
-        @include breakpoint(sm) {
-          width: 100% !important;
-        }
-      }
-      .category__item {
-        overflow: hidden;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
         position: relative;
-        .category__img {
-          img {
-            margin-top: 8px;
-            vertical-align: middle;
-            width: 100%;
+        @include breakpoint(sm) {
+          &:nth-child(1) {
+            grid-column: 1/-1;
+            grid-row: 1/3;
+          }
+
+          &:nth-child(2) {
+            grid-column: 1/7;
+          }
+
+          &:nth-child(3) {
+            grid-column: 7/-1;
+          }
+
+          &:nth-child(4) {
+            grid-column: 1/7;
+          }
+
+          &:nth-child(5) {
+            grid-column: 7/-1;
           }
         }
+
+        @include breakpoint(md) {
+          &:nth-child(1) {
+            grid-column: 1/7;
+            grid-row: 1/-1;
+          }
+
+          &:nth-child(2) {
+            grid-column: 7/10;
+          }
+
+          &:nth-child(3) {
+            grid-column: 10/-1;
+          }
+
+          &:nth-child(4) {
+            grid-column: 7/10;
+          }
+
+          &:nth-child(5) {
+            grid-column: 10/-1;
+          }
+        }
+
+        .category__img {
+          visibility: hidden;
+          img {
+            aspect-ratio: 16/9;
+            width: 100%;
+            height: auto;
+          }
+        }
+
         .category__btn {
           position: absolute;
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
+        }
+      }
+
+      .MuiSkeleton-root {
+        background: $cyan-alt;
+        height: 200px;
+
+        @include breakpoint(sm) {
+          height: 160px;
+          &:nth-child(1) {
+            grid-column: 1/-1;
+            grid-row: 1/3;
+            height: 100%;
+          }
+
+          &:nth-child(2) {
+            grid-column: 1/7;
+          }
+
+          &:nth-child(3) {
+            grid-column: 7/-1;
+          }
+
+          &:nth-child(4) {
+            grid-column: 1/7;
+          }
+
+          &:nth-child(5) {
+            grid-column: 7/-1;
+          }
+        }
+
+        @include breakpoint(md) {
+          height: 140px;
+          &:nth-child(1) {
+            grid-column: 1/7;
+            grid-row: 1/-1;
+            height: 100%;
+          }
+
+          &:nth-child(2) {
+            grid-column: 7/10;
+          }
+
+          &:nth-child(3) {
+            grid-column: 10/-1;
+          }
+
+          &:nth-child(4) {
+            grid-column: 7/10;
+          }
+
+          &:nth-child(5) {
+            grid-column: 10/-1;
+          }
+        }
+
+        @include breakpoint(lg) {
+          height: 170px;
         }
       }
     }
