--- a/client/src/Sass/components/_customBreadcrumbs.scss
+++ b/client/src/Sass/components/_customBreadcrumbs.scss
@@ -17,6 +17,27 @@
     display: flex;
     align-items: center;
 
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 25rem;
+      background-image: linear-gradient(to top, $white-alt, transparent);
+      left: 0;
+      bottom: 0;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 15rem;
+      background-image: linear-gradient(to bottom, $white-alt, transparent);
+      left: 0;
+      bottom: -15rem;
+      z-index: -1;
+    }
+
     @include breakpoint(md) {
       height: calc(100% + 4rem);
       top: -4rem;
@@ -24,6 +45,7 @@
 
     .customBreadcrumbs__content {
       width: 100%;
+      z-index: 1;
 
       .customBreadcrumbs__title {
         color: $dark-alt;
