--- a/client/src/Sass/components/_newsletter.scss
+++ b/client/src/Sass/components/_newsletter.scss
@@ -1,53 +1,60 @@
 .newsletter__section {
   background-color: $cyan-alt;
   padding: $x-3 0;
+  margin-top: $x-3;
+
   .newsletter__content {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    @include breakpoint(md) {
-      flex-direction: row;
-      justify-content: space-between;
-    }
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
     .newsletter__data {
-      @include breakpoint(md) {
-        width: 40%;
-      }
-      @include breakpoint(lg) {
-        width: 45%;
-      }
+      max-width: 800px;
+      width: 100%;
       .newsletter__title {
         @include h2-font;
         font-weight: $semi-bold;
         color: $dark-alt;
       }
       .newsletter__description {
-        margin-top: $x-0-5;
         @include normal-font;
         font-weight: $medium;
         color: $dark-alt;
       }
-    }
-    .newsletter__input {
-      display: flex;
-      align-items: center;
-      @include breakpoint(md) {
-        width: 55%;
-      }
-      @include breakpoint(lg) {
-        width: 50%;
-      }
-      input {
-        border: $border-gray;
-        height: 2.8rem;
-        padding-left: $x-1;
+
+      .newsletter__form {
+        display: flex;
+        align-items: center;
+        border-bottom: $border-dark-alt;
         width: 100%;
-        @include normal-font;
-        font-weight: $medium;
-        color: $dark-alt;
-        background-color: transparent;
+        margin-top: $x-1-25;
+
         @include breakpoint(md) {
-          height: 3rem;
+          margin-top: $x-1-5;
+        }
+
+        input {
+          height: 2.5rem;
+          padding-right: $x-0-75;
+          width: 100%;
+          @include small-font;
+          font-weight: $medium;
+          color: $dark-alt;
+          background-color: transparent;
+          @include breakpoint(md) {
+            height: 2.8rem;
+          }
+        }
+
+        .MuiIconButton-root {
+          color: $dark-alt;
+          @include transition(300ms);
+          &:hover {
+            background-color: $dark-alt !important;
+            color: $white-alt;
+          }
         }
       }
     }
