--- a/client/src/Sass/config/_controls.scss
+++ b/client/src/Sass/config/_controls.scss
@@ -108,7 +108,7 @@
 // **Custom Alert
 .custom__alert {
   // margin: 2rem 0;
-  margin-top: $x-0-5;
+  // margin-top: $x-0-5;
   .MuiPaper-root {
     // opacity: 0.9;
     border-radius: 0;
