--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -14,6 +14,7 @@
 @import "components/categories";
 @import "components/products";
 @import "components/newsletter";
+@import "components/footer";
 @import "components/customBreadcrumbs";
 @import "components/profileInfo";
 @import "components/userAvatar";
