--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -9,6 +9,7 @@
 // Components
 @import "components/scroll";
 @import "components/header";
+@import "components/headerSearch";
 @import "components/hero";
 @import "components/category";
 @import "components/categories";
