--- a/client/src/Sass/config/_controls.scss
+++ b/client/src/Sass/config/_controls.scss
@@ -102,6 +102,10 @@
     border: 1px solid $dark-alt;
     color: $dark;
     background-color: transparent;
+    &:hover {
+      color: $white;
+      background-color: $dark-alt;
+    }
   }
 }
 
