--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -10,6 +10,7 @@
 @import "components/scroll";
 @import "components/header";
 @import "components/headerSearch";
+@import "components/banner";
 @import "components/hero";
 @import "components/category";
 @import "components/categories";
