modify: product layout, added: category product, re-design: prodcut item, breadcrumbs...

--- a/client/src/Dashboard/DashboardStyles/_dashboardLayout.scss
+++ b/client/src/Dashboard/DashboardStyles/_dashboardLayout.scss
@@ -1,6 +1,8 @@
 .dashboardLayout {
   // @include body-margin(minus);
   // height: 100vh;
+  // background: gray;
+  margin-top: 4rem;
 
   .dashboardLayout__menu {
     // background: $cyan-alt;
