--- a/client/src/Sass/components/_category.scss
+++ b/client/src/Sass/components/_category.scss
@@ -1,5 +1,5 @@
 .category__section {
-  background-color: $white;
+  // background-color: $white;
   .category__content {
     .category__data,
     .category__skeleton {
