--- a/client/src/Sass/components/_products.scss
+++ b/client/src/Sass/components/_products.scss
@@ -1,5 +1,5 @@
 .products__section {
-  background-color: $white;
+  // background-color: $white;
   .products__content {
     display: grid;
     place-items: center;
