--- a/client/src/Sass/config/_layout.scss
+++ b/client/src/Sass/config/_layout.scss
@@ -44,6 +44,13 @@
   }
 }
 
+// only small screen visible
+.sm__screen {
+  @include breakpoint(md) {
+    display: none;
+  }
+}
+
 // Outline Button
 // .btn__outline {
 //   .MuiButton-root {
