--- a/client/src/Sass/components/_headerSearch.scss
+++ b/client/src/Sass/components/_headerSearch.scss
@@ -34,13 +34,18 @@
   }
 
   .headerSearch__container {
-    background: white;
+    background: $white-alt;
     height: 500px;
     width: 100%;
     position: absolute;
-    top: 3.5rem;
+    top: 2.9rem;
     padding: $x-1-25;
     overflow-y: auto;
+    @include box-shadow;
+
+    @include breakpoint(md) {
+      top: 3.3rem;
+    }
 
     .headerSearch__content {
       height: 100%;
