--- a/client/src/Sass/components/_productItem.scss
+++ b/client/src/Sass/components/_productItem.scss
@@ -1,7 +1,9 @@
 .product__item {
-  width: 280px;
-  @include breakpoint(sm) {
-    width: 100%;
+  // width: 250px;
+  background-color: $white;
+  padding: $x-0-75;
+  @include breakpoint(md) {
+    // width: 100%;
   }
   .product__img {
     position: relative;
@@ -13,38 +15,55 @@
       overflow: hidden;
     }
 
-    .product__action {
+    .product__action1 {
       position: absolute;
-      bottom: -20%;
-      width: 100%;
-      @include transition(500ms);
+      top: 0rem;
+      right: -2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.1rem;
+      @include transition(400ms);
+      // justify-content: ;
 
       .MuiIconButton-root {
-        background-color: $white-alt;
+        // background-color: $white-alt;
         &:disabled {
-          background-color: $cyan;
+          // background-color: $cyan;
           opacity: 1;
           .MuiSvgIcon-root {
-            color: $white-alt;
+            color: $cyan;
           }
         }
         @include transition(300ms);
         .MuiSvgIcon-root {
-          color: $cyan;
+          color: $dark-alt;
           @include h4-font;
           @include transition(300ms);
         }
         &:hover {
-          background-color: $cyan;
+          // background-color: $cyan;
           .MuiSvgIcon-root {
-            color: $white-alt;
+            color: $cyan;
             opacity: 1;
           }
         }
       }
     }
+
     &:hover {
-      .product__action {
+      .product__action1 {
+        right: 0;
+      }
+    }
+
+    .product__action2 {
+      position: absolute;
+      bottom: -20%;
+      width: 100%;
+      @include transition(400ms);
+    }
+    &:hover {
+      .product__action2 {
         bottom: 8%;
       }
     }
@@ -63,5 +82,13 @@
     color: $dark-alt;
     @include smaller-font;
     opacity: 0.6;
+  }
+
+  .product__btn--group {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: center;
+    margin-top: $x-1-5;
   }
 }
