--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -25,6 +25,8 @@
 @import "components/login&signup";
 @import "components/profile";
 @import "components/productLayout";
+@import "components/productLayoutFilter";
+@import "components/productLayoutFilterMenu";
 @import "components/productItem";
 @import "components/product";
 @import "components/productReview";
