--- a/client/src/Sass/components/_productItem.scss
+++ b/client/src/Sass/components/_productItem.scss
@@ -2,6 +2,9 @@
   // width: 250px;
   background-color: $white;
   padding: $x-0-75;
+  // display: grid;
+  // grid-template-rows: auto 70px;
+  // background: gray;
   @include breakpoint(md) {
     // width: 100%;
   }
@@ -12,47 +15,54 @@
       object-fit: cover;
       vertical-align: middle;
       width: 100%;
-      overflow: hidden;
+      // overflow: hidden;
     }
 
     .product__action1 {
       position: absolute;
-      top: 0rem;
-      right: -2rem;
+      top: 0.5rem;
+      right: -2.5rem;
       display: flex;
       flex-direction: column;
-      gap: 0.1rem;
+      align-items: center;
+      // gap: 0.1rem;
       @include transition(400ms);
-      // justify-content: ;
 
       .MuiIconButton-root {
-        // background-color: $white-alt;
-        &:disabled {
-          // background-color: $cyan;
-          opacity: 1;
-          .MuiSvgIcon-root {
-            color: $cyan;
-          }
-        }
+        // &:disabled {
+        //   opacity: 1;
+        //   .MuiSvgIcon-root {
+        //     color: $cyan;
+        //   }
+        // }
         @include transition(300ms);
         .MuiSvgIcon-root {
           color: $dark-alt;
-          @include h4-font;
+          @include h3-font;
           @include transition(300ms);
         }
         &:hover {
-          // background-color: $cyan;
           .MuiSvgIcon-root {
             color: $cyan;
             opacity: 1;
           }
         }
       }
+
+      .product__active--icon {
+        // background: gray;
+        // display: flex;
+        // align-items: center;
+        .MuiSvgIcon-root {
+          color: $cyan;
+          @include h3-font;
+        }
+      }
     }
 
     &:hover {
       .product__action1 {
-        right: 0;
+        right: 0.5rem;
       }
     }
 
@@ -60,7 +70,31 @@
       position: absolute;
       bottom: -20%;
       width: 100%;
+      display: flex;
+      justify-content: center;
       @include transition(400ms);
+
+      .MuiButton-root {
+        height: 2.2rem;
+        letter-spacing: 0px;
+        @include smaller-font;
+        @include breakpoint(md) {
+          height: 2.3rem;
+        }
+
+        &:disabled {
+          color: $cyan !important;
+          opacity: 1;
+          cursor: default !important;
+          .MuiSvgIcon-root {
+            color: $cyan;
+          }
+        }
+
+        .MuiSvgIcon-root {
+          @include h3-font;
+        }
+      }
     }
     &:hover {
       .product__action2 {
