--- a/client/src/Sass/components/_profileInfo.scss
+++ b/client/src/Sass/components/_profileInfo.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   text-align: initial;
-  margin-top: $x-1-75;
+  // margin-top: $x-1-75;
   padding: $x-0-75;
   .profileInfo__item {
     display: grid;
