--- a/client/src/Sass/index.scss
+++ b/client/src/Sass/index.scss
@@ -42,6 +42,7 @@
 @import "components/customDropdown";
 @import "components/productListItem";
 @import "components/paymentForm";
+@import "components/orders";
 
 // Dashboard
 @import "../dashboard/DashboardStyles/dashboardIndex";
