--- a/client/src/Sass/components/_profile.scss
+++ b/client/src/Sass/components/_profile.scss
@@ -1,5 +1,6 @@
 .profile {
-  // position: relative;
+  position: relative;
+  margin-top: -5rem;
   .profile__content {
     display: grid;
     gap: 2.5rem;
@@ -15,15 +16,30 @@
       background-color: $white;
       text-align: center;
       padding: $x-1-25;
-      max-width: 450px;
+      max-width: 650px;
       width: 100%;
       margin: 0 auto;
+      @include box-shadow;
+
       .MuiSkeleton-root {
         margin: 0 auto;
       }
       .MuiAvatar-root {
         margin: 0 auto;
+        // @include box-shadow;
+        // position: relative;
+        // z-index: 1;
+        // border: 3px solid $gray;
       }
+
+      .profile__card {
+        // background-color: $white;
+        // padding: $x-1-25;
+        // border-radius: 8px;
+        // position: relative;
+        // top: -4.3rem;
+      }
+
       .profile__name {
         color: $dark-alt;
         margin-top: $x-1-25;
@@ -33,7 +49,7 @@
         padding-bottom: $x-0-75;
       }
       .profile__btn {
-        margin-top: $x-0-75;
+        // margin-top: $x-0-75;
         .MuiButton-root {
           width: 100%;
         }
