--- a/client/src/Sass/components/_profile.scss
+++ b/client/src/Sass/components/_profile.scss
@@ -19,7 +19,7 @@
       max-width: 650px;
       width: 100%;
       margin: 0 auto;
-      @include box-shadow;
+      // @include box-shadow;
 
       .MuiSkeleton-root {
         margin: 0 auto;
