--- a/client/src/sass/components/_profileLayout.scss
+++ b/client/src/sass/components/_profileLayout.scss
@@ -1,10 +1,10 @@
-.dashboardLayout {
+.profileLayout {
   // @include body-margin(minus);
   // height: 100vh;
   // background: gray;
   margin-top: 4rem;
 
-  .dashboardLayout__menu {
+  .profileLayout__menu {
     // background: $cyan-alt;
     // position: fixed;
     // width: 12rem;
@@ -19,14 +19,14 @@
     //   z-index: initial;
     // }
   }
-  .dashboardLayout__container {
+  .profileLayout__container {
     @include breakpoint(md) {
       // display: grid;
       // grid-template-columns: 12rem auto;
       margin-left: 12rem;
     }
 
-    .dashboardLayout__pages {
+    .profileLayout__pages {
       // padding: $x-1;
       @include breakpoint(sm) {
         // padding: $x-0-25;
