--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -23,6 +23,9 @@
 @import "components/imageHandler";
 @import "components/fileUploader";
 @import "components/login&signup";
+@import "components/profileLayout";
+@import "components/profileHeader";
+@import "components/profileMenu";
 @import "components/profile";
 @import "components/productLayout";
 @import "components/productLayoutFilter";
