modified: profile page re-design

--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -38,6 +38,8 @@
 @import "components/reviewComment";
 @import "components/cart";
 @import "components/cartItem";
+@import "components/wishlist";
+@import "components/wishlistItem";
 @import "components/cartSubtotal";
 @import "components/checkout";
 @import "components/customizeAccordion";
