--- a/client/src/sass/components/_customBreadcrumbs.scss
+++ b/client/src/sass/components/_customBreadcrumbs.scss
@@ -3,6 +3,7 @@
   height: 250px;
   width: 100%;
   margin-bottom: $x-1-75;
+  margin-left: 12rem;
   @include breakpoint(md) {
     height: 380px;
   }
