--- a/client/src/sass/components/_customBreadcrumbs.scss
+++ b/client/src/sass/components/_customBreadcrumbs.scss
@@ -2,8 +2,8 @@
   position: relative;
   height: 250px;
   width: 100%;
+  // text-align: right;
   margin-bottom: $x-1-75;
-  margin-left: 12rem;
   @include breakpoint(md) {
     height: 380px;
   }
@@ -47,6 +47,12 @@
     .customBreadcrumbs__content {
       width: 100%;
       z-index: 1;
+      padding: 0 1.5rem;
+
+      // display: flex;
+      // align-items: flex-end;
+      // flex-direction: column;
+      // text-align: right;
 
       .customBreadcrumbs__title {
         color: $dark-alt;
