--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -48,6 +48,7 @@
 @import "components/productListItem";
 @import "components/paymentForm";
 @import "components/orders";
+@import "components/addresses";
 
 // Dashboard
 @import "../dashboard/DashboardStyles/dashboardIndex";
